--- a/requirements.txt
+++ b/requirements.txt
@@ -18,8 +18,6 @@ cryptography==39.0.0
 cycler==0.11.0
 decorator==4.4.2
 dlib==19.24.0
-face-recognition==1.3.0
-face-recognition-models==0.3.0
 flatbuffers==23.1.4
 fonttools==4.38.0
 gast==0.4.0
@@ -70,6 +68,7 @@ pydantic==1.10.4
 PyJWT==2.6.0
 pyparsing==3.0.9
 python-dateutil==2.8.2
+python-dotenv==0.21.1
 pytz==2022.7.1
 pywin32==305
 replicate==0.4.0
